<resources>


    <string name="app_name">HangManProject</string>
    <string name="play_game">Play Game</string>
    <string name="add_new_word">Add New Words</string>
    <string name="option">Option</string>
    <string name="add_word">Add Words</string>
    <string name="choose_level">Choose Level</string>
    <string name="language">Language </string>
    <string name="show_level">Show levels </string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="start">Start</string>
    <string name="select_the_language">Select The Language</string>

    // spinner Items
    <string name="level">Level 1</string>
    <string name="leve2">Level 2</string>
    <string name="leve3">Level 3</string>
    <string name="leve4">Level 4</string>


    <string-array name="level_arrays">
        <item>@string/level</item>
        <item>@string/leve2</item>
        <item>@string/leve3</item>
        <item>@string/leve4</item>

    </string-array>


    <string name="gallows">The Gallows</string>
    <string name="head">The Head</string>
    <string name="body">The Body</string>
    <string name="arm">An Arm</string>
    <string name="leg">A Leg</string>


    <string name="level_prompt">Choose a Level</string>
</resources>
