<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.qaiser.hangmanproject.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        >


        <ImageView
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/www" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hang_man"/>

    </RelativeLayout>



    <!--<android.support.v7.widget.CardView-->
    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/card_view"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--card_view:cardCornerRadius="10dp">-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/layout_boundary">


        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_playGame"
            android:text="@string/play_game"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"/>
        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_dictionary"
            android:text="@string/add_new_word"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            />

        <!--<Button-->
        <!--android:layout_gravity="center"-->
        <!--android:id="@+id/btn_help"-->
        <!--android:text="HELP"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_margin="5dp"-->
        <!--android:textColor="#000000"-->
        <!--android:textSize="15dp"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@drawable/button_shape"-->
        <!--/>-->

        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_Option"
            android:text="@string/option"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            />


    </LinearLayout>
    <!--</android.support.v7.widget.CardView>-->
</LinearLayout>
